config: set  no-explicit-any error off

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
